gccida/g1/copy_insn_list
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_insn_list/src/integrate.c:1786:4: error: expected ';' after expression
rtx v8; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_insn_list/src/integrate.c:1786:5: error: use of undeclared identifier 'v8'
rtx v8; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_insn_list/src/integrate.c:1788:4: error: expected ';' after expression
rtx v10; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_insn_list/src/integrate.c:1788:5: error: use of undeclared identifier 'v10'
rtx v10; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_insn_list/src/integrate.c:1791:4: error: expected ';' after expression
rtx v13; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_insn_list/src/integrate.c:1791:5: error: use of undeclared identifier 'v13'
rtx v13; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_insn_list/src/integrate.c:1793:4: error: expected ';' after expression
rtx v15; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_insn_list/src/integrate.c:1793:5: error: use of undeclared identifier 'v15'
rtx v15; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_insn_list/src/integrate.c:1813:4: error: expected ';' after expression
rtx v35; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_insn_list/src/integrate.c:1813:5: error: use of undeclared identifier 'v35'
rtx v35; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_insn_list/src/integrate.c:1825:4: error: expected ';' after expression
rtx sequence[3]; // [rsp+8h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_insn_list/src/integrate.c:1825:5: error: use of undeclared identifier 'sequence'
rtx sequence[3]; // [rsp+8h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_insn_list/src/integrate.c:1837:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = ( __int64)rtx[2]; 
               ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_insn_list/src/integrate.c:1845:1: error: use of undeclared identifier 'v8'
v8 = 0LL; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_insn_list/src/integrate.c:1855:15: error: use of undeclared identifier 'v8'
&& *( _WORD *)v8->fld[0].rtwint == 61 
              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_insn_list/src/integrate.c:1856:25: error: expected expression
&& rtx_equal_p( *( rtx *)&v8[1], static_chain_incoming_rtx->fld[0].rtx) ) 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_insn_list/src/integrate.c:1856:27: error: use of undeclared identifier 'v8'
&& rtx_equal_p( *( rtx *)&v8[1], static_chain_incoming_rtx->fld[0].rtx) ) 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_insn_list/src/integrate.c:1859:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)static_chain_incoming_rtx + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_insn_list/src/integrate.c:1860:1: error: use of undeclared identifier 'v8'
v8->fld[0].rtx); 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_insn_list/src/obj/integrate.o] Error 1
